Fix contact form redirect URL

--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://animated-garbanzo-7499w544x46hxg44.github.dev/"
+            value="https://rishisingh1999.github.io/my-portfolio-website/"
           />
 
           <div class="field">
