--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,7 @@
             ></textarea>
           </div>
 
-          <button type="submit" class="btn btn--primary" id="fake-submit">
+          <button type="submit" class="btn btn--primary">
             Send Message
           </button>
           <p class="form-status" id="form-status">
