Replace chatbot with Tawk.to widget (safe, free, works immediately)

--- a/index.html
+++ b/index.html
@@ -1468,27 +1468,20 @@
       document.body.appendChild(jsTag);
     })();
   </script>
-<!-- AI Chatbot Widget -->
-<script>
-(function() {
-  var script = document.createElement('script');
-  script.src = 'https://cdn.jsdelivr.net/npm/@botpress/webchat@latest/dist/inject.js';
-  script.async = true;
-  document.body.appendChild(script);
-  script.onload = function() {
-    window.botpressWebChat.init({
-      botId: 'placeholder-bot-id',
-      hostUrl: 'https://cdn.botpress.cloud',
-      messagingUrl: 'https://messaging.botpress.cloud',
-      clientId: 'placeholder-client-id',
-      botName: 'Portfolio Assistant',
-      showPoweredBy: false,
-      stylesheet: 'https://webchat-styler-css.botpress.app/prod/code/96db5fc3-2eb9-43a5-9d0f-2edb9c9889db/v57821/style.css',
-      useSessionStorage: true,
-      enableConversationDeletion: false
-    });
-  };
+
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/67985a77af5bfec1dbe371c6/1iileic9h';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
