--- a/index.html
+++ b/index.html
@@ -1471,4 +1471,75 @@
 
 
 </body>
+
+
+<!--Start of Mobile-Style Chat Widget-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+Tawk_API.customStyle = {
+    visibility : {
+        desktop : {
+            position : 'br',
+            xOffset : 20,
+            yOffset : 20
+        },
+        mobile : {
+            position : 'br',
+            xOffset : 10,
+            yOffset : 10
+        }
+    }
+};
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/67985a77af5bfec1dbe371c6/1iileic9h';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+
+<!--Mobile-Style Custom CSS-->
+<style>
+/* Modern Mobile-Style Chat Button */
+#tawk-bubble-container {
+    animation: slideUp 0.3s ease-out;
+}
+
+@keyframes slideUp {
+    from {
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+/* Mobile-optimized chat window */
+@media (max-width: 768px) {
+    iframe[title="chat widget"] {
+        width: 100vw !important;
+        height: 100vh !important;
+        max-width: 100vw !important;
+        max-height: 100vh !important;
+        bottom: 0 !important;
+        right: 0 !important;
+        border-radius: 0 !important;
+        position: fixed !important;
+    }
+}
+
+/* Desktop: Modern rounded style */
+@media (min-width: 769px) {
+    iframe[title="chat widget"] {
+        border-radius: 16px !important;
+        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3) !important;
+    }
+}
+</style>
+</body>
 </html>
