Add complete glassmorphism chatbot with HTML

--- a/glassy-chatbot.html
+++ b/glassy-chatbot.html
@@ -324,3 +324,29 @@ function generateResponse(query) {
   return `${knowledge.name} is a ${knowledge.role} with expertise in Power BI, SQL, Python, and revenue analytics. He's ${knowledge.status}. Ask me about his skills, experience, projects, or how to contact him!`;
 }
 </script>
+
+<!-- Chatbot HTML -->
+<button class="chat-button" onclick="toggleChat()">
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+    <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+  </svg>
+</button>
+
+<div class="chat-panel">
+  <div class="chat-header">
+    <h3>AI Assistant</h3>
+    <button onclick="toggleChat()" style="background:none;border:none;color:white;cursor:pointer;font-size:20px">&times;</button>
+  </div>
+  <div id="chat-messages" class="chat-messages">
+    <div class="message bot">
+      <div class="avatar">🤖</div>
+      <div class="message-content">
+        <p>Hi! I'm Hrushikesh's AI assistant. Ask me about his experience, skills, or projects!</p>
+      </div>
+    </div>
+  </div>
+  <div class="chat-input">
+    <input type="text" id="chat-input" placeholder="Ask about experience, skills, projects..." onkeypress="handleKeyPress(event)">
+    <button onclick="sendMessage()">▸</button>
+  </div>
+</div>
