Fix HTML syntax error in chatbot panel div

--- a/index.html
+++ b/index.html
@@ -1853,8 +1853,7 @@ function generateResponse(query) {
   </svg>
 </button>
 
-<div class="chat-panel id="chatPanel"">
-  <div class="chat-header">
+<div class="chat-panel" id="chatPanel">  <div class="chat-header">
     <h3>AI Assistant</h3>
     <button onclick="toggleChat()" style="background:none;border:none;color:white;cursor:pointer;font-size:20px">&times;</button>
   </div>
