Fix HTML closing tag for style element
Fixed typo in closing style tag (was }/style> should be </style>)
This was causing the entire website to break.

--- a/index.html
+++ b/index.html
@@ -1139,8 +1139,7 @@
         min-width: 44px;
         padding: 10px 16px;
       }
-    }/style>
-</head>
+    </style></head>
 <body>
   <div id="app">
     <header class="nav">
