Move chatbot send button to the right with margin-left auto
Adds inline style to push send button to right side of input area using flexbox auto margin. This improves UX by making the button more visible and accessible.

--- a/index.html
+++ b/index.html
@@ -1908,7 +1908,7 @@ function generateResponse(query) {
   </div>
   <div class="chat-input">
     <input type="text" id="chat-input" placeholder="Ask about experience, skills, projects..." onkeypress="handleKeyPress(event)">
-    <button onclick="sendMessage()">▸</button>
+    <button onclick="sendMessage()"> style="margin-left: auto;">▸</button>
   </div>
 </div>
 </body>
