Fix chatbot send button HTML - move style attribute inside button tag
Fixed malformed HTML where style attribute was outside the button tag.
Previously: <button onclick="sendMessage()"> style="margin-left: auto;">▸</button>
Now: <button onclick="sendMessage()" style="margin-left: auto;">▸</button>

This fixes the send button functionality and proper right-side positioning.

--- a/index.html
+++ b/index.html
@@ -1911,5 +1911,4 @@ function generateResponse(query) {
     <button onclick="sendMessage()"> style="margin-left: auto;">▸</button>
   </div>
 </div>
-</body>
-</html>
+      <button onclick="sendMessage()" style="margin-left: auto;">▸</button></html>
