Fix chatbot: remove duplicate script blocks and clean up extra files

--- a/glassy-chatbot.html
+++ b/glassy-chatbot.html
@@ -324,116 +324,6 @@ function generateResponse(query) {
   return `${knowledge.name} is a ${knowledge.role} with expertise in Power BI, SQL, Python, and revenue analytics. He's ${knowledge.status}. Ask me about his skills, experience, projects, or how to contact him!`;
 }
 </script>
+</body>
+</html>
 
-<!-- Chatbot HTML -->
-<button class="chat-button" onclick="toggleChat()">
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-    <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
-  </svg>
-</button>
-
-<div class="chat-panel">
-  <div class="chat-header">
-    <h3>AI Assistant</h3>
-    <button onclick="toggleChat()" style="background:none;border:none;color:white;cursor:pointer;font-size:20px">&times;</button>
-  </div>
-  <div id="chat-messages" class="chat-messages">
-    <div class="message bot">
-      <div class="avatar">🤖</div>
-      <div class="message-content">
-        <p>Hi! I'm Hrushikesh's AI assistant. Ask me about his experience, skills, or projects!</p>
-      </div>
-    </div>
-  </div>
-  <div class="chat-input">
-    <input type="text" id="chat-input" placeholder="Ask about experience, skills, projects..." onkeypress="handleKeyPress(event)">
-    <button onclick="sendMessage()">▸</button>
-  </div>
-</div>
-
-<script>
-const knowledge = {
-  name: "Hrushikesh Singh Bondili",
-  role: "RevOps Analyst & Business Analyst",
-  experience: "4+ years in data analytics, revenue operations, and data science",
-  education: "Master of Business Analytics (GPA 3.4/4.0) from Sacred Heart University (2023-2024)",
-  skills: ["Power BI & DAX", "SQL", "Python (Pandas, ML, XGBoost)", "Revenue Operations", "Workflow Automation (n8n)"],
-  projects: [
-    "AI-Powered Supply Chain Disruption Predictor with 94.2% accuracy",
-    "Hospital Readmission Risk Model with 85% AUC-PR",
-    "EV Adoption Market Analysis across 2000+ US counties"
-  ],
-  contact: "hrushisingh99@gmail.com | +1 203-994-4997",
-  status: "Open to roles (Remote/Hybrid)"
-};
-
-function toggleChat() {
-  document.getElementById('chatPanel').classList.toggle('active');
-}
-
-function handleKeyPress(event) {
-  if (event.key === 'Enter') sendMessage();
-}
-
-function sendMessage() {
-  const input = document.getElementById('chatInput');
-  const message = input.value.trim();
-  if (!message) return;
-  
-  addMessage('user', message);
-  input.value = '';
-  
-  setTimeout(() => {
-    const response = generateResponse(message);
-    addMessage('bot', response);
-  }, 500);
-}
-
-function addMessage(type, text) {
-  const container = document.getElementById('chatMessages');
-  const messageDiv = document.createElement('div');
-  messageDiv.className = `message \${type}`;
-  
-  if (type === 'bot') {
-    messageDiv.innerHTML = `
-      <div class="avatar">🤖</div>
-      <div class="message-content">\${text}</div>
-    `;
-  } else {
-    messageDiv.innerHTML = `
-      <div class="message-content">\${text}</div>
-    `;
-  }
-  
-  container.appendChild(messageDiv);
-  container.scrollTop = container.scrollHeight;
-}
-
-function generateResponse(query) {
-  const q = query.toLowerCase();
-  
-  if (q.includes('experience') || q.includes('work')) {
-    return `\${knowledge.name} has \${knowledge.experience}. Check out the Projects section to see specific work examples!`;
-  }
-  if (q.includes('education') || q.includes('degree') || q.includes('study')) {
-    return `Education: \${knowledge.education}`;
-  }
-  if (q.includes('skill') || q.includes('tech') || q.includes('tool')) {
-    return `Core skills: \${knowledge.skills.join(', ')}. Strong in analytics and automation!`;
-  }
-  if (q.includes('project')) {
-    return `Featured projects: \${knowledge.projects.join(' | ')}`;
-  }
-  if (q.includes('contact') || q.includes('email') || q.includes('reach')) {
-    return `Reach out at: \${knowledge.contact}`;
-  }
-  if (q.includes('available') || q.includes('job') || q.includes('hire')) {
-    return `\${knowledge.status}. Open to Business Analyst, Data Analyst, and RevOps roles!`;
-  }
-  if (q.includes('hello') || q.includes('hi') || q.includes('hey')) {
-    return `Hi! I'm Hrushikesh's AI assistant. Ask me about his experience, skills, or projects!`;
-  }
-  
-  return `\${knowledge.name} is a \${knowledge.role} with expertise in Power BI, SQL, Python, and revenue analytics. Ask me about specific areas!`;
-}
-</script>
