--- a/index.html
+++ b/index.html
@@ -1480,7 +1480,7 @@
         <div class="contact-card card">
           <h3>Contact Details</h3>
           <ul class="contact-list">
-            <li><span>Email:</span> <a href="mailto:hrushisingh697@gmail.com">hrushisingh697@gmail.com</a></li>
+            <li><span>Email:</span> <a href="mailto:singhhrushi1999@gmail.com">singhhrushi1999@gmail.com</a></li>
             <li><span>Phone:</span> <a href="tel:+12039944997">+1 203‑994‑4997</a></li>
             <li><span>LinkedIn:</span> <a href="https://linkedin.com/in/hrushikesh-singh-revops" target="_blank">/in/hrushikesh-singh-revops</a></li>
             <li><span>Portfolio:</span> <a href="https://rishisingh1999.github.io" target="_blank">rishisingh1999.github.io</a></li>
@@ -1489,7 +1489,7 @@
 
         <form
           class="contact-form card"
-          action="https://formsubmit.co/hrushisingh697@gmail.com"
+          action="https://formsubmit.co/singhhrushi1999@gmail.com"
           method="POST"
         >
           <h3>Quick Message</h3>
@@ -1770,7 +1770,7 @@ const knowledge = {
     "Hospital Readmission Risk Model with 85% AUC-PR",
     "EV Adoption Market Analysis across 2000+ US counties"
   ],
-  contact: "hrushisingh697@gmail.com | +1 203-994-4997",
+  contact: "singhhrushi1999@gmail.com | +1 203-994-4997",
   status: "Open to roles (Remote/Hybrid)"
 };
 
